--- a/css/style.css
+++ b/css/style.css
@@ -55,6 +55,30 @@ nav ul li a {
 
 
 
+.container {
+    display: flex;
+}
+
+ .right-sidebar {
+    width: 200px;
+    background-color: white;
+    /* padding: 10px; */
+}
+
+.content {
+    flex: 1;
+    padding: 10px;
+}
+.blue_block3 {
+    display: block;
+    height: 400px;
+    background:#0043B3;
+    text-align: right;
+    width: 50px;
+    margin-left: auto;
+    margin-top: 60px;
+    /* padding-right: 200px; */
+}
 
 
 /* Section styling */
