--- a/css/man'sbio.css
+++ b/css/man'sbio.css
@@ -1,4 +1,11 @@
 
+/* Global style */
+body {
+    font-family: Arial, sans-serif;
+    margin: 0;
+    padding: 0;
+    background-color: #fff;
+}
 a {
     text-decoration: none; /* 移除所有链接的下划线 */
     color: inherit; /* 使用父元素的颜色 */
@@ -21,6 +28,7 @@ a {
     font-size: 15px; /* 设置字体大小 */
     gap: 15px; /* 控制元素之间的间距 */
 }
+
 
 body {
     font-family: Arial, sans-serif;
