--- a/css/style.css
+++ b/css/style.css
@@ -16,11 +16,15 @@ a {
 }
 
  .right-sidebar {
-    width: 200px;
+    width: 10%;
     background-color: white;
     /* padding: 10px; */
 }
-
+.left-sidebar {
+    width: 10%;
+    background-color: white;
+    /* padding: 10px; */
+}
 .content {
     flex: 1;
     padding: 10px;
