--- a/css/rp.css
+++ b/css/rp.css
@@ -35,8 +35,10 @@ a {
 
 .container{
     display: flex;
+    flex-direction: row;
 }
 .left{
+    flex-grow: 1;
     width: 10%;
     display: flex; /* 启用弹性布局 */
     justify-content: flex-start; 
@@ -58,13 +60,16 @@ a {
     font-size: 25px;
     margin-top: 2%;
     text-align: left;
-    margin-right: 20%;
+    margin-right: 10%;
+    width: 70%;
 }
 .mid p{
     font-size: 18px ;
 }
 .right {
-    width: 20%;
+    flex-basis: 20%;
+    flex-grow: 1;
+    width: 20% !important;
     margin-top: 2%;
     display: flex; /* 启用弹性布局 */
     justify-content: flex-end; /* 右对齐 */
@@ -73,11 +78,13 @@ a {
     font-size: 15px;
   }
 .blue_block3 {
+    flex-grow: 1;
     height: 90px;
     background: #0043B3;
     width: 80px;
 }
 .text-content {
+    flex-grow: 1;
     margin-right: 20px; /* 给蓝色块留出空间 */
     color:#666666;
 }
