--- a/css/student_achievement.css
+++ b/css/student_achievement.css
@@ -9,5 +9,103 @@ a {
     text-decoration: none; /* 移除所有链接的下划线 */
     color: inherit; /* 使用父元素的颜色 */
 }
-
+.mid{
+    flex-grow: 1;
+    width: 80%;
+}
+.right {
+    width: 10%;
+    display: flex; /* 启用弹性布局 */
+    justify-content: flex-end; /* 右对齐 */
+    align-items: center; /* 确保垂直居中 */
+    text-align: right;
+    font-size: 15px;
+}
+.container{
+    display: flex;
+}
+.left{
+    width: 10%;
+    display: flex; /* 启用弹性布局 */
+    justify-content: flex-start; 
+}
 /* Header styling */
+.tabs {
+        display: flex;
+        border-bottom: 2px solid #333333; 
+        width: 100%;
+        justify-content: space-between; /* Ensures left alignment for all children */
+}
+    
+.tab {
+        padding: 10px 20px;
+        cursor: pointer; 
+        font-weight: normal;
+        color: grey; 
+        font-size: 20px;
+}
+    
+.tab.active {
+        font-weight: bold; 
+        color: black; 
+        font-size: 20px;
+}
+
+
+
+
+/* Container for news items */
+.news-container {
+    display: flex;
+    flex-wrap: wrap; /* Allows multiple rows if necessary */
+    gap: 10px; /* Spacing between news items */
+    margin-top: 30px;
+    margin-bottom: 15px;
+}
+
+/* 基本样式 */
+.news-item {
+    background-color: white; /* 基本背景色 */
+    border: 1px solid lightgray; /* 默认边框颜色 */
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1); /* 阴影效果 */
+    width: calc(50% - 20px); /* 均匀分布 */
+    display: flex; /* 图片和内容水平对齐 */
+    flex-direction: column; /* 垂直堆叠 */
+    transition: border-color 0.3s; /* 为边框颜色改变添加过渡效果 */
+}
+
+/* 悬浮时的边框变色 */
+.news-item:hover {
+    /* border-color: #0043B3; 悬浮时边框变蓝 */
+    transform: scale(1.05);
+}
+
+/* 图片样式 */
+.news-image {
+    text-align: center;
+    /* padding: 10px; */
+}
+
+.news-image img {
+    max-width: 100%; /* 确保图片宽度自适应 */
+    height: auto; /* 保持原始比例 */
+}
+
+/* 内容样式 */
+.news-content {
+    padding: 10px;
+}
+
+.news-content .date {
+    font-size: 14px;
+    color: #666666;
+    ; /* 字体颜色 */
+}
+
+.news-content .Details {
+    font-size: 16px;
+    color: #333333; /* 字体颜色 */
+    line-height: 1.5; /* 行间距 */
+}
+
+    
