--- a/css/patent.css
+++ b/css/patent.css
@@ -125,6 +125,7 @@ a {
     align-items: center; /* 确保垂直居中 */
     text-align: right;
     font-size: 15px;
+    margin-bottom: 70%;
   }
 .blue_block3 {
     flex-grow: 1;
