--- a/css/ad.css
+++ b/css/ad.css
@@ -60,16 +60,21 @@ a {
     font-size: 25px;
     margin-top: 2%;
     text-align: left;
-    margin-right: 10%;
     width: 70%;
 }
-.mid p{
-    font-size: 18px ;
+.date{
+    color:#666666;
+    font-size: 16px;
 }
+.Abstract{
+    font-size: 19px;
+}
+
 .full-width-image {
     width: 100%; /* 图片占据整个容器宽度 */
     height: auto; /* 确保图片按比例缩放 */
     margin-top: 15px; /* 给图片一些顶部间距 */
+    margin-bottom: 5%;
 }
 
 .right {
@@ -82,6 +87,7 @@ a {
     align-items: center; /* 确保垂直居中 */
     text-align: right;
     font-size: 15px;
+    margin-bottom: 45%;
   }
 .blue_block3 {
     flex-grow: 1;
@@ -100,5 +106,5 @@ a {
 .text-content .size2{
     border-bottom: 1px solid #CCCCCC; /* 设置下划线 */
     padding-bottom: 25px; /* 为下划线留出空间 */
-    margin-bottom: 25px;
+    margin-bottom: 80px;
 }
