--- a/css/Contact.css
+++ b/css/Contact.css
@@ -11,3 +11,59 @@ a {
 }
 
 /* Header styling */
+.container{
+    display: flex;
+}
+.mid{
+    flex-grow: 1;
+}
+.right {
+    width: 20%;
+    display: flex; /* 启用弹性布局 */
+
+}
+.left{
+    width: 20%;
+}
+
+.container2 {
+    max-width: 600px;
+    background-color: white;
+    border: 1px solid #ddd;
+    border-radius: 5px;
+    padding: 20px;
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+    margin: 0 auto;
+}
+
+/* Title styling */
+h1 {
+    font-size: 1.5em;
+    margin-bottom: 20px;
+    color: #333;
+}
+
+/* Blue line styling */
+.blue-line {
+    height: 10px;
+    background-color: #0043B3;
+    width: 150px;
+    margin: 0 auto; 
+}
+.center{
+    text-align: center;
+}
+/* Section headers */
+.section-header {
+    font-weight: bold;
+    margin-top: 20px;
+}
+
+/* Contact details styling */
+.contact-info {
+    margin-bottom: 10px;
+}
+
+.details{
+    font-size: 14px !important;
+}
