--- a/css/rp.css
+++ b/css/rp.css
@@ -70,10 +70,13 @@ a {
     text-align: left;
     margin-right: 10%;
     width: 70%;
+    /* line-height: 24px;  */
 }
 .mid p{
     font-size: 18px ;
+    line-height: 1.6;
 }
+
 .right {
     flex-basis: 20%;
     flex-grow: 1;
