--- a/css/news.css
+++ b/css/news.css
@@ -61,9 +61,11 @@ a {
 .content-with-bar {
     display: flex; /* 使用 Flexbox 布局 */
     /* align-items: stretch;  */
-    justify-content: flex-start; /* 控制元素从左向右排列 */
+    justify-content: space-between; /* 控制元素从左向右排列 */
 }
-
+.content{
+    width: 80%;
+}
 .main h1 {
     font-size: 24px;
 }
@@ -71,6 +73,7 @@ a {
 .main p {
     font-size: 13px;
     margin-right: 40px;
+    line-height: 2;
 }
 
 .right-bar {
