--- a/css/groupmember.css
+++ b/css/groupmember.css
@@ -9,7 +9,7 @@ body {
     text-align: left;
 }
 
- .right-sidebar {
+.right-sidebar {
     width: 400px;
     background-color: white;
     /* padding: 10px; */
@@ -23,6 +23,9 @@ body {
     display: inline-block; /* 内联块级显示 */
     margin-bottom: 50px;
 }
+.header-wrapper p{
+    line-height: 1.6;
+}
 
 .blue-bar {
     background-color: #0043B3;
@@ -31,9 +34,10 @@ body {
     display: inline-block;
 }
 
+
 .content-with-bar {
-    display: flex; /* 使用 Flexbox 布局 */
-    justify-content: flex-start; /* 控制元素从左向右排列 */
+    display: flex; 
+    justify-content: flex-start; 
     margin-bottom: 50px;
 
 }
@@ -44,4 +48,97 @@ body {
     display: inline-block; /* 作为内联块级元素 */
     /* margin-left: 10px;  */
     margin-right: 50px;
+}
+
+
+
+
+
+
+.profile-container {
+    display: flex;
+    align-items: center;
+    padding: 20px;
+}
+
+.profile-image {
+    width: 100px; /* Adjust size as needed */
+    height: 100px;
+    border-radius: 50%; /* Circular image */
+    margin-right: 20px;
+}
+
+.profile-info p {
+    margin: 0;
+    padding: 0;
+}
+
+button {
+    background-color: white;
+    font-size: 17px;
+    color: black;
+    border: none;
+    /* padding: 10px 20px; */
+    padding-top: 15px;
+    padding-left: 0px;
+    cursor: pointer;
+    font-size: 20px;
+}
+
+
+
+.modal {
+    display: none; /* 默认隐藏 */
+    position: fixed; /* 固定位置 */
+    right: 0; /* 屏幕右侧 */
+    top: 0;
+    width: 100%; /* 宽度 */
+    height: 100%; /* 高度 */
+    overflow: auto; /* 必要时启用滚动 */
+    background-color: rgba(0,0,0,0.4); /* 黑色半透明 */
+}
+
+.modal-content {
+    background-color: #fefefe;
+    margin-left: 60%;
+    border: 1px solid #888;
+    width: 40%; /* Adjust width as needed */
+    display: flex;
+}
+.left1{
+    width: 10%;
+}
+.right1{
+    width: 8%;
+    
+}
+.mid1{
+    flex: 1;
+}
+.title{
+    font-size: 30px;
+}
+.content{
+    font-size: 20px;
+    line-height: 2;
+}
+.close {
+    color: #aaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+    color: black;
+    cursor: pointer;
+}
+
+.little{
+    font-size: 22px;
+    font-weight: bold;
+}
+.large{
+    font-size: 20px;
 }
